# vacationvm

./: .gitignore  CLAUDE.md  README.md  flake.nix
dns/: README.md  package.nix  pyproject.toml
dns/tests/: test_model.py  test_plan.py  test_reconcile.py
dns/vacationvm_dns/: __init__.py  __main__.py  cli.py  model.py  plan.py  porkbun.py
docs/: adding-a-service.md  architecture.md  bootstrap.md  dns.md  secrets.md
lib/: default.nix
modules/: app-options.nix  fleet.nix
scripts/: register-host.sh
templates/hive/: .gitignore  README.md  flake.nix
templates/hive/hosts/: wyrm.nix
templates/hive/secrets/: secrets.nix
templates/hive/services/: annexwyrm.nix
templates/service/: .gitignore  Cargo.toml  README.md  flake.nix
templates/service/nix/: package.nix  vacationvm-module.nix
templates/service/src/: main.rs
